[GST-CT] update parent pom